policies/require-drop-capabilities.yml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-drop-capabilities
spec:
  validationFailureAction: Enforce
  rules:
    - name: check-drop-all
      match:
        any:
          - resources:
              kinds:
                - Pod
              namespaces:
                - go-deploy-lab
      validate:
        message: "Containers must drop ALL capabilities."
        pattern:
          spec:
            containers:
              - securityContext:
                  capabilities:
                    drop:
                      - ALL
